모바일 버그 및 z-index fix

--- a/asset/company.scss
+++ b/asset/company.scss
@@ -191,7 +191,7 @@ section {
     background: $c-white;
     color: $c-dark;
     .btn-jump {
-        z-index: 55;
+        z-index: 5;
         position: absolute;
         left: 50%;
         margin-left: -24px;
